fix safari issue, work item text align

--- a/src/scss/work.scss
+++ b/src/scss/work.scss
@@ -172,7 +172,6 @@
 				position: static;
 			}
 			.work-info {
-				position: absolute;
 				display: block;
 				font-size: 24px;
 				padding: 0 20px;
